# shotclassify

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml
.cron-state/: STATE.md
.cron-state/sessions/: 2026-06-20-0537.md  2026-06-20-0854.md  2026-06-20-1414.md  2026-06-20-1644.md  2026-06-20-1959.md  2026-06-20-2243.md  2026-06-21-0124.md  2026-06-21-0501.md  2026-06-21-0757.md  2026-06-21-1107.md  2026-06-21-1443.md  2026-06-21-1753.md  2026-06-21-2056.md  2026-06-22-0007.md  2026-06-22-0353.md  2026-06-22-0723.md  2026-06-22-1058.md  2026-06-22-1456.md  2026-06-22-1743.md  2026-06-22-2128.md  2026-06-23-0032.md  2026-06-23-0407.md  2026-06-23-0914.md  2026-06-23-1240.md  2026-06-23-1656.md  2026-06-23-2036.md  2026-06-24-0141.md  2026-06-25-0142.md  2026-06-25-0704.md  2026-06-25-1221.md  2026-06-25-1735.md  2026-06-25-2210.md  2026-06-26-0233.md  2026-06-26-0750.md  2026-06-26-1411.md  2026-06-26-1855.md  2026-06-26-2334.md  2026-06-27-0125.md  2026-06-27-0513.md  2026-06-27-0916.md  (+12 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/shotclassify_cli/: main.py
docs/: api.md  architecture.md  benchmark.md  calibration.md  contributing.md  deployment.md  openapi.json  security.md
docs/schemas/: ChartFields.json  ChatFields.json  Classification.json  ClassificationRecord.json  CodeFields.json  Confidence.json  DocumentFields.json  ErrorFields.json  ExtractedFields.json  MemeFields.json  OCRResult.json  ProcessRequest.json  ProcessResult.json  ReceiptFields.json  ReceiptLine.json  RouteDecision.json  UIMockupFields.json
fixtures/bench/: report.csv  report.json
scripts/: bench.py  dev.sh  dogfood.sh  make_corpus.py  make_samples.py
tests/: test_access_reviews.py  test_admin_overview.py  test_admin_seats_usage.py  test_aggregate.py  test_airport_extractor.py  test_allowed_api_key_scopes.py  test_allowed_content_types_policy.py  test_allowed_invite_domains.py  test_amount_extractor.py  test_api.py  test_api_key_access_windows.py  test_api_key_activity.py  test_api_key_expiring.py  test_api_key_inactivity_policy.py  test_api_key_ip_allowlist.py  test_api_key_max_active_policy.py  test_api_key_max_age_policy.py  test_api_key_monthly_quota.py  test_api_key_owner_email.py  test_api_key_ttl_policy.py  test_api_keys_db.py  test_app_routes_unique.py  test_audit.py  test_audit_chain.py  test_audit_export.py  test_audit_retention_policy.py  test_audit_sinks.py  test_auth_lockout.py  test_auth_lockout_policy.py  test_auth_whoami.py  test_blob_tenant_scoping.py  test_chat_attachments.py  test_chat_bot_messages.py  test_chat_edited_markers.py  test_chat_forwards.py  test_chat_hashtag_mention.py  test_chat_link_previews.py  test_chat_pins.py  test_chat_polls.py  test_chat_quotes.py  (+213 more)
web/: next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/app/: page.tsx  (+3 more)
(+527 files in other folders)
