[project]
name = "shotclassify"
version = "0.1.0"
description = "Screenshot classifier with vision LLM, OCR, structured extraction, and action routing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sanjay", email = "51058514+Sanjays2402@users.noreply.github.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27",
    "openai>=1.40",
    "pillow>=12.3.0",
    "pytesseract>=0.3.10",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "langdetect>=1.0.9",
    "pygments>=2.18",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
    "rq>=1.16",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.2",
    "opentelemetry-api>=1.26",
    "opentelemetry-sdk>=1.26",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-exporter-otlp>=1.26",
    "prometheus-client>=0.20",
    "authlib>=1.3",
    "pyotp>=2.9",

    "sentry-sdk[fastapi]>=2.0",
    "shotclassify-common",
    "shotclassify-ocr",
    "shotclassify-classify",
    "shotclassify-extract",
    "shotclassify-route",
    "shotclassify-store",
    "shotclassify-cli",
]

[project.scripts]
shotclassify = "shotclassify_cli.main:app"

[tool.uv.sources]
shotclassify-common = { workspace = true }
shotclassify-ocr = { workspace = true }
shotclassify-classify = { workspace = true }
shotclassify-extract = { workspace = true }
shotclassify-route = { workspace = true }
shotclassify-store = { workspace = true }
shotclassify-cli = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "cli", "services/*"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "W"]
ignore = ["S101", "S104", "S105", "S106", "S311", "N818"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services/api/app"]
