[project]
name = "shotclassify-cli"
version = "0.1.0"
requires-python = ">=3.11"
description = "ShotClassify CLI"
dependencies = ["typer>=0.12", "rich>=13.7"]
[project.scripts]
shotclassify = "shotclassify_cli.main:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/shotclassify_cli"]
